# kehaha-5.github.io

./: _config.yml  index.html  package-lock.json  package.json  search.json
about/: index.html
archives/: index.html
archives/2024/: index.html
css/: aircloud.css  prism.css
js/: index.js  prism.js
page/2/: index.html
source/_posts/: 2024-03-04-使用valgrind检测内存泄漏.md  2024-03-05-使用valgrind进行性能分析.md  2024-03-21-udp丢包排查.md  2024-04-18-docker-compose-部署php-web项目.md  2024-04-18-docker-compose-部署web项目.md  2024-08-16-从零到一--搭建web项目集群.md  2024-08-23-k8s-jenkins-构建持续交付流水线.md  2025-01-05-Mysql执行过长排查.md  2025-03-22-k8s中为Pod配置自签证书以访问HTTPS服务.md  2025-04-03-casdoor服务启动却无法访问排障.md  2025-04-26-MTU设置不当导致请求失败：问题分析与解决方法.md  2025-05-15-K8s中VPC-NAT-GW公网IP无法访问的排障过程.md  2025-05-15-记一次K8s中VPC-NAT-GW公网IP无法访问的排障过程.md  2025-07-06-使用ansible管理windwos.md  2025-07-07-如何制作Windows11镜像并在KubeVirt中部署.md  2025-08-14-Linux网络丢包告警的排查实践.md  2025-08-14-记一次Linux网络丢包告警的排查实践.md  2025-09-03-阿里云Prometheus成本优化实战.md  2025-09-13-监控驱动的故障排查：利用PMQL定位集群问题.md  2026-01-04-虚拟化初探-libvirt-OVN实践.md  2026-03-25-Kube-OVN-网关-Pod-网络异常与-OVS-绑定的排查.md
source/_posts/2024-03-21-udp丢包排查/udp_drop_packets_test/: CMakeLists.txt
source/about/: index.md
source/tags/: index.md
tags/: index.html
tags/OVN/: index.html
tags/ansible/: index.html
tags/c/: index.html
tags/callgrind/: index.html
tags/docker-compose/: index.html
tags/jenkins/: index.html
tags/k8s/: index.html
tags/kube-ovn/: index.html
tags/linux/: index.html
tags/massif/: index.html
tags/mysql/: index.html
tags/traefik/: index.html
(+50 files in other folders)
